--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
 	<version>1.0-SNAPSHOT</version>
 	<name>camel</name>
 	<url>http://maven.apache.org</url>
+
+	<properties>
+		<camel.version>2.13.0</camel.version>
+	</properties>
+
 	<dependencies>
 
 		<dependency>
@@ -19,13 +24,19 @@
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-core</artifactId>
-			<version>2.13.0</version>
+			<version>${camel.version}</version>
 		</dependency>
 		
 		<dependency>
 		    <groupId>org.apache.camel</groupId>
 		    <artifactId>camel-velocity</artifactId>
-		    <version>2.13.0</version>
+		    <version>${camel.version}</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.camel</groupId>
+		    <artifactId>camel-http4</artifactId>
+		    <version>${camel.version}</version>
 		</dependency>
 		
 		<dependency>
