--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,10 +2,10 @@
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1} - %m%n
 
 ### niveis de log disponiveis: 'debug', 'info', 'warn', 'error', 'fatal' 
 log4j.rootLogger=info, stdout
 log4j.logger.br.com.caelum=debug
-log4j.logger.org.apache.camel=INFO
+log4j.logger.org.apache.camel=WARN
 
